--- a/handson_ML/Immobilien.ipynb
+++ b/handson_ML/Immobilien.ipynb
@@ -152,6 +152,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16512 Trainingsdatensätze + 4128 Testdatensätze\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6965</th>\n",
+       "      <td>-118.06</td>\n",
+       "      <td>33.99</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1203.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>637.0</td>\n",
+       "      <td>211.0</td>\n",
+       "      <td>3.3611</td>\n",
+       "      <td>174400.0</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7969</th>\n",
+       "      <td>-118.19</td>\n",
+       "      <td>33.87</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>1213.0</td>\n",
+       "      <td>269.0</td>\n",
+       "      <td>628.0</td>\n",
+       "      <td>229.0</td>\n",
+       "      <td>3.6987</td>\n",
+       "      <td>152100.0</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19285</th>\n",
+       "      <td>-122.75</td>\n",
+       "      <td>38.43</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>1599.0</td>\n",
+       "      <td>345.0</td>\n",
+       "      <td>1086.0</td>\n",
+       "      <td>314.0</td>\n",
+       "      <td>2.6667</td>\n",
+       "      <td>149100.0</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3262</th>\n",
+       "      <td>-122.90</td>\n",
+       "      <td>39.17</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1314.0</td>\n",
+       "      <td>277.0</td>\n",
+       "      <td>649.0</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>2.5750</td>\n",
+       "      <td>73600.0</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1473</th>\n",
+       "      <td>-122.03</td>\n",
+       "      <td>37.97</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1613.0</td>\n",
+       "      <td>338.0</td>\n",
+       "      <td>865.0</td>\n",
+       "      <td>336.0</td>\n",
+       "      <td>3.2500</td>\n",
+       "      <td>151100.0</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "6965     -118.06     33.99                46.0       1203.0           219.0   \n",
+       "7969     -118.19     33.87                42.0       1213.0           269.0   \n",
+       "19285    -122.75     38.43                36.0       1599.0           345.0   \n",
+       "3262     -122.90     39.17                45.0       1314.0           277.0   \n",
+       "1473     -122.03     37.97                45.0       1613.0           338.0   \n",
+       "\n",
+       "       population  households  median_income  median_house_value  \\\n",
+       "6965        637.0       211.0         3.3611            174400.0   \n",
+       "7969        628.0       229.0         3.6987            152100.0   \n",
+       "19285      1086.0       314.0         2.6667            149100.0   \n",
+       "3262        649.0       232.0         2.5750             73600.0   \n",
+       "1473        865.0       336.0         3.2500            151100.0   \n",
+       "\n",
+       "      ocean_proximity  \n",
+       "6965        <1H OCEAN  \n",
+       "7969        <1H OCEAN  \n",
+       "19285       <1H OCEAN  \n",
+       "3262           INLAND  \n",
+       "1473         NEAR BAY  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "#Funktion, um einen Testdatensatz aus einem Gesamtdatensatz zu lösen\n",
+    "#dabei wird sichergestellt, dass bei jedem Aufruf dieselben Testdaten erzeugt werden\n",
+    "#test_ratio = Größe des Testdatensatzes in Prozent der Gesamtdaten\n",
+    "def split_train_test(data,test_ratio):\n",
+    "    # stellt sicher, dass np.random bei jedem Aufruf dieselben Zahlen erzeugt\n",
+    "    np.random.seed(14)\n",
+    "    \n",
+    "    # len(array) gibt die Anzahl der Zeilen eines Arrays zurück\n",
+    "    shuffled_indices = np.random.permutation(len(data))\n",
+    "    \n",
+    "    # errechnet die absolute Anzahl der Testdatensätze\n",
+    "    test_set_size = int(len(data) * test_ratio)\n",
+    "    \n",
+    "    test_indices = shuffled_indices[:test_set_size]  # ...BIS zur Anzahl der Testdatensätze\n",
+    "    train_indices = shuffled_indices[test_set_size:] # ...AB der Anzahl der Testdatensätze\n",
+    "    \n",
+    "    # iloc kommt aus pandas, gibt Datensätze an den benannten Indizes aus - erstellt also die 2 getrennten Datensätze\n",
+    "    return data.iloc[train_indices], data.iloc[test_indices]\n",
+    "\n",
+    "train_set, test_set = split_train_test(immobilien, 0.2)\n",
+    "print(len(train_set), \"Trainingsdatensätze +\", len(test_set), \"Testdatensätze\")\n",
+    "train_set.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
